frontend: update position % dynamically with ws
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/header.tmpl
+++ b/frontend/templates/header.tmpl
@@ -21,30 +21,7 @@
             background-color: #1A202C;
         }
 
-        .bg-color-black {
-            background-color: #2C313D !important;
-        }
 
-        .table-bg {
-            background-color: #373C47;
-        }
-
-        table>tbody>tr:nth-of-type(odd) {
-            background-color: #2C313D !important;
-            color: whitesmoke !important;
-        }
-
-        table>tbody>tr:nth-of-type(even) {
-            background-color: #373C47 !important;
-            color: whitesmoke !important;
-        }
-
-        .bg-hover:hover {
-            background-color: #373C47 !important;
-            color: whitesmoke !important;
-        }
-
-        /* width */
         ::-webkit-scrollbar {
             width: 10px;
         }
@@ -53,17 +30,36 @@
             background: rgba(0, 0, 0, 0);
         }
 
-        /* Handle */
         ::-webkit-scrollbar-thumb {
             background: #6A6B6D;
             border-radius: 10px;
         }
 
-        .gh-bg-color-red {
+
+        table>tbody>tr:nth-of-type(odd) {
+            color: whitesmoke !important;
+            background-color: #2C313D;
+        }
+
+        table>tbody>tr:nth-of-type(even) {
+            color: whitesmoke !important;
+            background-color: #373C47;
+        }
+
+        .bg-color-black {
+            background-color: #2C313D;
+        }
+
+        .bg-hover:hover {
+            background-color: #373C47;
+            color: whitesmoke;
+        }
+
+        .bg-color-red {
             background-color: #b33939 !important;
         }
 
-        .gh-bg-color-green {
+        .bg-color-green {
             background-color: #218c74 !important;
         }
 
