--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -1,4 +1,4 @@
-{{ template "header.tpl" "Leaderboard" }}
+{{ template "header.tmpl" "Leaderboard" }}
 <main class="container">
     <div class="pt-5 text-center text-white">
         <h2>gRPCOIN</h2>
@@ -37,4 +37,4 @@
         </div>
     </div>
 </main>
-{{ template "footer.tpl" }}
+{{ template "footer.tmpl" }}
