--- a/frontend/templates/profile.tmpl
+++ b/frontend/templates/profile.tmpl
@@ -1,4 +1,4 @@
-{{ template "header.tpl" (printf "User: %s" .u.DisplayName) }}
+{{ template "header.tmpl" (printf "User: %s" .u.DisplayName) }}
 
 {{ $tv := pv .u.Portfolio .quotes }}
 <div class="container">
@@ -34,7 +34,7 @@
                         </div>
                         <div class="text-end text-white">
                             {{fmtPrice .u.Portfolio.CashUSD -}}<br/>
-                            <span class="text-white-50">
+                            <span class="text-white-50" id="percent-cash">
                                 {{ fmtPercent (toPercent ( div .u.Portfolio.CashUSD $tv ) ) }}
                             </span>
                         </div>
@@ -54,7 +54,7 @@
                             </div>
                             <div class="text-end text-white">
                                 <span id="posValue-{{$tick}}">{{ fmtPrice (mul $amount (index $.quotes $tick )) }}</span><br/>
-                                <span class="text-white-50">
+                                <span class="text-white-50" id="percent-{{$tick}}">
                                 {{ fmtPercent ( toPercent (div (mul $amount (index $.quotes $tick )) $tv )) }}
                             </span>
 
@@ -87,25 +87,25 @@
                 </h4>
                 <div class="card-body text-center p-0">
                     <div class="table-responsive">
-                        <table class="table table-striped mb-0">
+                        <table class="table table-striped mb-0" id="returns">
                             <thead>
-                                <tr>
-                                    {{ range .returns }}
+                            <tr>
+                                {{ range .returns }}
                                     <th scope="col" class="text-white returns-tbl">{{.Label}}</th>
-                                    {{ end }}
-                                </tr>
+                                {{ end }}
+                            </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    {{ range .returns }}
+                            <tr>
+                                {{ range .returns }}
                                     <td
-                                        class="{{ if isNegative .Percent }}gh-bg-color-red{{ else }}gh-bg-color-green{{end}} returns-tbl">
+                                            class="{{ if isNegative .Percent }}bg-color-red{{ else }}bg-color-green{{end}} returns-tbl">
                                         <b>
                                             {{ fmtPercent .Percent }}
                                         </b>
                                     </td>
-                                    {{ end }}
-                                </tr>
+                                {{ end }}
+                            </tr>
                             </tbody>
                         </table>
                     </div>
@@ -248,13 +248,13 @@
             </div>
 
             {{ with .orders }}
-            <div class="card mt-3 bg-color-black">
-                <h4 class="card-header">
-                    <span class="text-white">Orders</span>
-                </h4>
-                <div class="card-body table-responsive" style="max-height: 500px;">
-                    <table class="table table-striped table-hover text-white">
-                        <thead>
+                <div class="card mt-3 bg-color-black">
+                    <h4 class="card-header">
+                        <span class="text-white">Orders</span>
+                    </h4>
+                    <div class="card-body table-responsive" style="max-height: 500px;">
+                        <table class="table table-striped table-hover text-white">
+                            <thead>
                             <tr>
                                 <th>Action</th>
                                 <th>Ticker</th>
@@ -288,45 +288,50 @@
             {{ end }}
         </div>
     </div>
-    <hr/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/decimal.js/9.0.0/decimal.min.js"></script>
-    <script>
-        const socket = new WebSocket((window.location.protocol == 'http:' ? "ws" : "wss")+ "://"+window.location.host+"/ws/tickers");
+</div>
 
-        const toDecimal = v => new Decimal(v.Units || v.units || 0).plus(new Decimal(v.Nanos || v.nanos || 0).times(new Decimal(10).pow(-9)))
-        const fmtPrice = v => v.toNumber().toLocaleString('en-US',{
-            maximumFractionDigits: 2,
-            minimumFractionDigits: 2,
-        });
+<script src="https://cdnjs.cloudflare.com/ajax/libs/decimal.js/9.0.0/decimal.min.js"></script>
+<script>
+    const socket = new WebSocket((window.location.protocol == 'http:' ? "ws" : "wss") + "://" + window.location.host + "/ws/tickers");
 
-        const initialQuotes = {{.quotes}};
-        const quotes = {};
-        const portfolio = {{.u.Portfolio.Positions }};
-        const cash = toDecimal({{.u.Portfolio.CashUSD}});
+    const toDecimal = v => new Decimal(v.Units || v.units || 0).plus(new Decimal(v.Nanos || v.nanos || 0).times(new Decimal(10).pow(-9)))
+    const fmtPrice = v => v.toNumber().toLocaleString('en-US', {
+        maximumFractionDigits: 2,
+        minimumFractionDigits: 2,
+    });
 
-        socket.onmessage = function (evt) {
-            const data = JSON.parse(evt.data)
-            const key = data.t
-            quotes[key] = toDecimal(data.p)
+    const initialQuotes = {{.quotes}};
+    const quotes = {};
+    const portfolio = {{.u.Portfolio.Positions }};
+    const cash = toDecimal({{.u.Portfolio.CashUSD}});
 
-            for (const [symbol, amount] of Object.entries(portfolio)) {
-                if (!quotes[symbol]) {
-                    continue
-                }
-                document.getElementById(`price-${symbol}`).innerHTML = fmtPrice(quotes[symbol])
-                const posValue = '$' + fmtPrice(toDecimal(amount).times(quotes[symbol]))
-                document.getElementById(`posValue-${symbol}`).innerHTML = posValue;
-            }
+    socket.onmessage = function (evt) {
+        const data = JSON.parse(evt.data)
+        const key = data.t
+        quotes[key] = toDecimal(data.p)
 
-            const posValues = Object.entries(portfolio).map(pos => {
-                const symbol = pos[0]
-                const amount = toDecimal(pos[1])
-                const price = quotes[symbol] || toDecimal(initialQuotes[symbol])
-                const posValue = amount.times(price)
-                return posValue
-            })
-            const total = cash.plus(posValues.reduce((a, b) => a.plus(b)) || 0);
-            document.getElementById("total").innerHTML = '$' + fmtPrice(total)
+        const posValues = new Map(Object.keys(portfolio).map((symbol,_) => {
+            const amount = portfolio[symbol];
+            const price = quotes[symbol] || toDecimal(initialQuotes[symbol])
+            const posValue = toDecimal(amount).times(price)
+            document.getElementById(`price-${symbol}`).innerHTML = fmtPrice(price)
+            document.getElementById(`posValue-${symbol}`).innerHTML = '$' + fmtPrice(posValue);
+            return [symbol,posValue]
+        }))
+
+        var totalValue = cash;
+        for (const [symbol, val] of posValues){
+            totalValue = totalValue.add(val)
         }
-    </script>
-    {{ template "footer.tpl" }}
+        document.getElementById("total").innerHTML = '$' + fmtPrice(totalValue)
+
+        var posPercentages = {};
+        posValues.forEach((posValue, symbol) => {
+            posPercentages[symbol] = posValue.dividedBy(totalValue).times(100).toFixed(2)
+            document.getElementById(`percent-${symbol}`).innerText = posPercentages[symbol] + '%'
+        })
+        document.getElementById("percent-cash").innerHTML = cash.dividedBy(totalValue).times(100).toFixed(2) + '%'
+
+    }
+</script>
+{{ template "footer.tmpl" }}
