frontend: set text color in a central place
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -1,14 +1,14 @@
 {{ template "header.tmpl" "Leaderboard" }}
 <main class="container">
-    <div class="pt-5 text-center text-white">
+    <div class="pt-5 text-center">
         <h2>gRPCOIN</h2>
         <p class="lead">Leaderboard</p>
     </div>
     <div class="card mx-auto bg-color-black col-12 col-lg-6 p-0">
         <div class="card-body p-1 m-0">
-            <table class="table table-borderless table-hover text-white m-0 leaderboard" id="LeaderTable">
+            <table class="table table-borderless table-hover m-0 leaderboard" id="LeaderTable">
                 <thead class="card-header">
-                    <tr class="text-white">
+                    <tr>
                         <th scope="col" class="p-3 fs-5">#</th>
                         <th scope="col" class="p-3 fs-5">Name</th>
                         <th scope="col" class="p-3 fs-5">Valuation</th>
