--- a/frontend/templates/header.tmpl
+++ b/frontend/templates/header.tmpl
@@ -8,9 +8,13 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>{{.}}</title>
     <style>
+        body, ul, li, td, th, .btn {
+            color: #e9e9e9 !important;
+        }
+
         a {
             text-decoration: none;
-            color: #f1f2f6;
+            color: #b1bad6;
         }
 
         a:hover {
