--- a/frontend/templates/profile.tmpl
+++ b/frontend/templates/profile.tmpl
@@ -16,25 +16,25 @@
                             {{.u.DisplayName}}
                         </a>
                     </h3>
-                    <p class="card-text text-white">
+                    <p class="card-text">
                         Joined {{ fmtDuration (since .u.CreatedAt) 1 }} ago.
                     </p>
                 </div>
             </div>
 
             <div class="card bg-color-black">
-                <h5 class="card-header text-white">
+                <h5 class="card-header">
                     Positions
                 </h5>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item
                         justify-content-between d-flex bg-color-black bg-hover">
                         <div>
-                            <b class="text-white">CASH</b>
+                            <b>CASH</b>
                         </div>
-                        <div class="text-end text-white">
+                        <div class="text-end">
                             {{fmtPrice .u.Portfolio.CashUSD -}}<br/>
-                            <span class="text-white-50" id="percent-cash">
+                            <span class="text-muted" id="percent-cash">
                                 {{ fmtPercent (toPercent ( div .u.Portfolio.CashUSD $tv ) ) }}
                             </span>
                         </div>
@@ -42,19 +42,21 @@
                     {{ range $tick, $amount := .u.Portfolio.Positions }}
                         <li class="list-group-item
                         justify-content-between d-flex bg-color-black bg-hover">
-                            <div class="text-muted">
-                                <b class="text-white">{{$tick}}</b><br/>
+                            <div>
+                                <b>{{$tick}}</b><br/>
                                 {{ if not (isZero $amount) }}
-                                    x{{ fmtAmount $amount }}
-                                    <small class>
-                                        at
-                                        <span id="price-{{$tick}}">{{ fmtPrice (index $.quotes $tick ) }}</span>
-                                    </small>
+                                    <span class="text-muted">
+                                        x{{ fmtAmount $amount }}
+                                        <small class>
+                                            at
+                                            <span id="price-{{$tick}}">{{ fmtPrice (index $.quotes $tick ) }}</span>
+                                        </small>
+                                    </span>
                                 {{end}}
                             </div>
-                            <div class="text-end text-white">
+                            <div class="text-end">
                                 <span id="posValue-{{$tick}}">{{ fmtPrice (mul $amount (index $.quotes $tick )) }}</span><br/>
-                                <span class="text-white-50" id="percent-{{$tick}}">
+                                <span class="text-muted" id="percent-{{$tick}}">
                                 {{ fmtPercent ( toPercent (div (mul $amount (index $.quotes $tick )) $tv )) }}
                             </span>
 
@@ -65,16 +67,16 @@
                 </ul>
                 <div class="card-footer justify-content-between d-flex bg-hover">
                     <div>
-                        <b class="text-white">Total value</b>
+                        <b>Total value</b>
                     </div>
-                    <div class="text-end text-white" id="total">
+                    <div class="text-end" id="total">
                         {{fmtPrice $tv }}
                     </div>
                 </div>
             </div>
 
             <div class="mt-3">
-                <a type="button" href="/" class="btn bg-color-black bg-hover btn-lg text-white
+                <a type="button" href="/" class="btn bg-color-black bg-hover btn-lg
                 d-none d-lg-block" style="width: 100%;">
                     &larr; Leaderboard
                 </a>
@@ -83,7 +85,7 @@
         <div class="col-lg-9 order-lg-last">
             <div class="card bg-color-black">
                 <h4 class="card-header">
-                    <span class="text-white">Returns</span>
+                    <span>Returns</span>
                 </h4>
                 <div class="card-body text-center p-0">
                     <div class="table-responsive returns-tbl">
@@ -91,7 +93,7 @@
                             <thead>
                             <tr>
                                 {{ range .returns }}
-                                    <th scope="col" class="text-white">{{.Label}}</th>
+                                    <th scope="col">{{.Label}}</th>
                                 {{ end }}
                             </tr>
                             </thead>
@@ -114,7 +116,7 @@
 
             <div class="card bg-color-black mt-3">
                 <h4 class="card-header">
-                    <span class="text-white">Portfolio Value</span>
+                    <span>Portfolio Value</span>
                 </h4>
                 <div class="card-body p-2">
                     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
@@ -250,10 +252,10 @@
             {{ with .orders }}
                 <div class="card mt-3 bg-color-black">
                     <h4 class="card-header">
-                        <span class="text-white">Orders</span>
+                        <span>Orders</span>
                     </h4>
                     <div class="card-body table-responsive" style="max-height: 500px;">
-                        <table class="table table-striped table-hover text-white">
+                        <table class="table table-striped table-hover">
                             <thead>
                             <tr>
                                 <th>Action</th>
@@ -341,6 +343,7 @@
             document.getElementById("percent-cash").innerHTML = cash.dividedBy(totalValue).times(100).toFixed(2) + '%'
         }
     }
+
     connectTickerWS();
 </script>
 {{ template "footer.tmpl" }}
