--- a/frontend/templates/profile.tmpl
+++ b/frontend/templates/profile.tmpl
@@ -296,40 +296,48 @@
     const fmtPrice = v => v.toNumber().toLocaleString('en-US', {maximumFractionDigits: 2, minimumFractionDigits: 2});
 
     const initialQuotes = {{.quotes}};
-    const quotes = {};
-    const portfolio = {{.u.Portfolio.Positions }};
+    const portfolio = {{.u.Portfolio.Positions}};
     const cash = toDecimal({{.u.Portfolio.CashUSD}});
+
+    const quotes = {};
 
     function connectTickerWS() {
         const socket = new WebSocket((window.location.protocol == 'http:' ? "ws" : "wss") + "://" + window.location.host + "/ws/tickers");
+        
         socket.onclose = function (evt) {
             setTimeout(connectTickerWS, 2000);
         }
-        socket.onmessage = function (evt) {
-            const data = JSON.parse(evt.data)
-            const key = data.t
-            quotes[key] = toDecimal(data.p)
 
-            const posValues = new Map(Object.keys(portfolio).map((symbol, _) => {
+        socket.onerror = function (msg) {
+            console.error(msg);
+        }
+        
+        socket.onmessage = function (evt) {
+            const {t,p}= JSON.parse(evt.data)
+
+            quotes[t] = toDecimal(p)
+
+            const posValues = new Map(Object.keys(portfolio).map((symbol) => {
                 const amount = portfolio[symbol];
                 const price = quotes[symbol] || toDecimal(initialQuotes[symbol])
                 const posValue = toDecimal(amount).times(price)
-                document.getElementById(`price-${symbol}`).innerHTML = fmtPrice(price)
+                document.getElementById(`price-${symbol}`).innerHTML = fmtPrice(price);
                 document.getElementById(`posValue-${symbol}`).innerHTML = '$' + fmtPrice(posValue);
                 return [symbol, posValue]
             }))
 
-            var totalValue = cash;
+            let totalValue = cash;
             for (const [symbol, val] of posValues) {
                 totalValue = totalValue.add(val)
             }
             document.getElementById("total").innerHTML = '$' + fmtPrice(totalValue)
 
-            var posPercentages = {};
+            const posPercentages = {};
             posValues.forEach((posValue, symbol) => {
                 posPercentages[symbol] = posValue.dividedBy(totalValue).times(100).toFixed(2)
                 document.getElementById(`percent-${symbol}`).innerText = posPercentages[symbol] + '%'
             })
+            
             document.getElementById("percent-cash").innerHTML = cash.dividedBy(totalValue).times(100).toFixed(2) + '%'
         }
     }
