frontend: make tooltip readable
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/profile.tmpl
+++ b/frontend/templates/profile.tmpl
@@ -179,7 +179,8 @@
                                 },
                                 y: {
                                     formatter: formatUSD,
-                                }
+                                },
+                                theme: 'dark'
                             },
                             fill: {
                                 type: 'solid',
