--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -1,37 +1,35 @@
 {{ template "header.tmpl" "Leaderboard" }}
 <main class="container">
-    <div class="pt-5 text-center">
-        <h2>gRPCOIN</h2>
-        <p class="lead">Leaderboard</p>
+    <div class="text-center">
+        <p class="lead display-2 fw-lighter">Leaderboard</p>
     </div>
     <div class="card mx-auto bg-color-black col-12 col-lg-6 p-0">
         <div class="card-body p-1 m-0">
             <table class="table table-borderless table-hover m-0 leaderboard" id="LeaderTable">
                 <thead class="card-header">
-                    <tr>
-                        <th scope="col" class="p-3 fs-5">#</th>
-                        <th scope="col" class="p-3 fs-5">Name</th>
-                        <th scope="col" class="p-3 fs-5">Valuation</th>
-                    </tr>
+                <tr>
+                    <th scope="col" class="p-3 fs-5">#</th>
+                    <th scope="col" class="p-3 fs-5">Name</th>
+                    <th scope="col" class="p-3 fs-5">Portfolio Value</th>
+                </tr>
                 </thead>
                 <tbody>
-                    {{ range .users }}
-                    <tr class="position-relative">
-                        <td></td>
-                        <td>
-                            {{ with (profilePic .User.ID) }}
-                            <img src="{{.}}" width="24" height="auto" />
-                            {{ end }}
-                            <a href="/user/{{.User.ID}}" id="{{.User.ID}}">
-                            {{.User.DisplayName}}</a
-                                >
-                        </td>
-                        <td id="price-{{.User.ID}}">    
-                            USD {{fmtPrice .Valuation}}
-                        </td>
-
+                {{ range .users }}
+                <tr class="position-relative">
+                    <td></td>
+                    <td>
+                        {{ with (profilePic .User.ID) }}
+                            <img src="{{.}}" width="24" height="auto"/>
                         {{ end }}
-                    </tr>
+                        <a href="/user/{{.User.ID}}" id="{{.User.ID}}">
+                            {{.User.DisplayName}}</a>
+                    </td>
+                    <td id="price-{{.User.ID}}">
+                        USD {{fmtPrice .Valuation}}
+                    </td>
+
+                    {{ end }}
+                </tr>
                 </tbody>
             </table>
         </div>
