frontend: create /join page rendered from .md
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/header.tmpl
+++ b/frontend/templates/header.tmpl
@@ -112,7 +112,7 @@
                 <a class="nav-link" href="/leaderboard">Leaderboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Join via API</a>
+                <a class="nav-link" href="/join">Join via API</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://github.com/grpcoin/grpcoin" target="_blank">Source</a>
