--- a/frontend/templates/home.tmpl
+++ b/frontend/templates/home.tmpl
@@ -80,7 +80,7 @@
             </a>
         </div>
         <div class="col text-start">
-            <a href="#" class="btn btn-lg btn-secondary">
+            <a href="/join" class="btn btn-lg btn-primary">
                 Join via the API
             </a>
         </div>
