frontend: minor adjustments
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/home.tmpl
+++ b/frontend/templates/home.tmpl
@@ -1,13 +1,13 @@
 {{ template "header.tmpl" "gRPCOIN - Paper trading cryptocurrencies" }}
 <div class="container">
     <h4 class="display-1 fw-lighter text-center">
-        API-driven cryptocurrency paper trading&nbsp;platform
+        API-driven cryptocurrency paper trading&nbsp;game
     </h4>
 </div>
 <div class="container-fluid px-3">
-    <div class="row">
-        <div class="col-12 col-md-6 col-lg-3">
-            <div class="card bg-transparent">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6 col-xl-4">
+            <div class="card bg-transparent mb-2">
                 <div class="card-body">
                     <h4 class="card-title fw-light">
                         Real-time prices, fake money...
@@ -21,8 +21,8 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-lg-3">
-            <div class="card bg-transparent">
+        <div class="col-12 col-md-6 col-xl-4">
+            <div class="card bg-transparent mb-2">
                 <div class="card-body">
                     <h4 class="card-title fw-light">
                         The best bot wins!
@@ -35,10 +35,10 @@
             </div>
         </div>
 
-        <!--rowbreak-->
+        <div class="w-100 d-none d-xl-block"></div>
 
-        <div class="col-12 col-md-6 col-lg-3">
-            <div class="card bg-transparent">
+        <div class="col-12 col-md-6 col-xl-4">
+            <div class="card bg-transparent mb-2">
                 <div class="card-body">
                     <h4 class="card-title fw-light">
                         Use any language
@@ -54,10 +54,8 @@
             </div>
         </div>
 
-        <!--rowbreak-->
-
-        <div class="col-12 col-md-6 col-lg-3">
-            <div class="card bg-transparent">
+        <div class="col-12 col-md-6 col-xl-4">
+            <div class="card bg-transparent mb-2">
                 <div class="card-body">
                     <h4 class="card-title fw-light">
                         Get started quickly
@@ -73,7 +71,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-2">
         <div class="col text-end">
             <a href="/leaderboard" class="btn btn-lg btn-secondary">
                 Leaderboard
