--- a/frontend/templates/home.tmpl
+++ b/frontend/templates/home.tmpl
@@ -6,7 +6,7 @@
 </div>
 <div class="container-fluid px-3">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <div class="card bg-transparent mb-2">
                 <div class="card-body">
                     <h4 class="card-title fw-light">
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <div class="card bg-transparent mb-2">
                 <div class="card-body">
                     <h4 class="card-title fw-light">
@@ -35,9 +35,9 @@
             </div>
         </div>
 
-        <div class="w-100 d-none d-xl-block"></div>
+        <div class="w-100 d-none d-lg-block"></div>
 
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <div class="card bg-transparent mb-2">
                 <div class="card-body">
                     <h4 class="card-title fw-light">
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <div class="card bg-transparent mb-2">
                 <div class="card-body">
                     <h4 class="card-title fw-light">
