--- a/frontend/templates/profile.tmpl
+++ b/frontend/templates/profile.tmpl
@@ -251,7 +251,11 @@
             {{ with .orders }}
                 <div class="card mt-3 bg-color-black">
                     <h4 class="card-header">
-                        <span>Orders</span>
+                        <span>Orders
+                        {{ with $.u.TradeStats.TradeCount }}
+                            ({{.}})
+                        {{end}}
+                        </span>
                     </h4>
                     <div class="card-body table-responsive" style="max-height: 500px;">
                         <table class="table table-striped table-hover">
