all: rename "orders" to "trades" (sans db col name)
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/profile.tmpl
+++ b/frontend/templates/profile.tmpl
@@ -248,10 +248,10 @@
                 </div>
             </div>
 
-            {{ with .orders }}
+            {{ with .trades }}
                 <div class="card mt-3 bg-color-black">
                     <h4 class="card-header">
-                        <span>Orders
+                        <span>Trades
                         {{ with $.u.TradeStats.TradeCount }}
                             ({{.}})
                         {{end}}
