--- a/frontend/templates/join.tmpl
+++ b/frontend/templates/join.tmpl
@@ -1,10 +1,11 @@
+{{- /*gotype: github.com/grpcoin/grpcoin/frontend.JoinHandlerData */ -}}
 {{ template "header.tmpl" "gRPCOIN - Paper trading cryptocurrencies" }}
 <div class="container">
     <h4 class="display-3 fw-lighter text-center">
         Get started with gRPCOIN API
     </h4>
     <article class="row justify-content-center">
-    <div class="col-12 col-lg-6">{{.Content}}</div>
+        <div class="col-12 col-lg-6">{{.Content}}</div>
     </article>
 </div>
 {{ template "footer.tmpl" }}
