--- a/frontend/templates/profile.tmpl
+++ b/frontend/templates/profile.tmpl
@@ -2,7 +2,7 @@
 {{ template "header.tmpl" (printf "User: %s" .U.DisplayName) }}
 
 {{ $tv := pv .U.Portfolio .Quotes }}
-<div class="container-fluid">
+<div class="container">
     <div class="row py-5">
         <div class="col-lg-3">
             <div class="card bg-color-black mb-3">
@@ -238,7 +238,7 @@
                             })
                         });
                     </script>
-                    <div id="chart w-100">
+                    <div id="chart" class="w-100">
                         <div class="toolbar text-end">
                             <button type="button" class="btn btn-sm btn-primary" id="one_month">1 month</button>
                             <button type="button" class="btn btn-sm btn-secondary" id="one_week">1 week</button>
