frontend: remove redundant sorting code for leaderboard
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -26,7 +26,7 @@
                             {{.User.DisplayName}}</a>
                     </td>
                     <td class="text-center">
-                        {{fmtPrice .Valuation}}
+                        {{fmtPrice .TotalPortfolioValue}}
                     </td>
                     {{ end }}
                 </tr>
